<resources>
    <string name="app_name">FirePOS</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_price">Price</string>
    <string name="hint_name">Name</string>
    <string name="hint_sku">SKU (optional)</string>
    <string name="hint_store_name">Store Name</string>
    <string name="hint_search_product">Search Product</string>

    <string name="tv_total">Total</string>
    <string name="tv_cart">Cart</string>

    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_login">Login</string>
    <string name="btn_registration">Registration</string>
    <string name="btn_add_product">Add Product</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_pay_now">Pay Now</string>

    <string name="msg_camera_rationale">This feature needs to access your camera to take a picture of your product.</string>
    <string name="msg_storage_rationale">This feature needs to access your storage to choose an image your product.</string>

    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_msg_logout">Are you sure want to logout your account?</string>
    <string name="dialog_msg_update_product">Are you sure want to update this product?</string>
    <string name="dialog_msg_delete_product">Are you sure want to delete this product?</string>
    <string name="dialog_msg_payment">Are you sure want to complete this transaction?</string>
    <string name="btn_pay">Pay</string>
    <string name="tv_pay_amount">Pay Amount</string>
    <string name="tv_change">Change</string>
    <string name="hint_category_name">Category name</string>
    <string name="tv_product_category">Product Category</string>
    <string name="tv_transaction">Transaction</string>
    <string name="tv_items">Items</string>
    <string name="tv_from">From</string>
    <string name="tv_to">To</string>
    <string name="tv_out_of_stock">OUT OF STOCK</string>
    <string name="tv_sold_out">SOLD OUT</string>
    <string name="title_cashier">Cashier</string>
    <string name="title_product">Product</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
</resources>