<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/spacing_small"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:title="Product Detail"
            app:titleTextColor="@color/black" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_product"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/circleImageView" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_image"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/btn_take_picture"
                    app:icon="@drawable/ic_photo_camera_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:hint="@string/hint_name"
                    app:boxCornerRadiusBottomEnd="@dimen/spacing_normal"
                    app:boxCornerRadiusBottomStart="@dimen/spacing_normal"
                    app:boxCornerRadiusTopEnd="@dimen/spacing_normal"
                    app:boxCornerRadiusTopStart="@dimen/spacing_normal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:hint="@string/hint_price"
                    app:boxCornerRadiusBottomEnd="@dimen/spacing_normal"
                    app:boxCornerRadiusBottomStart="@dimen/spacing_normal"
                    app:boxCornerRadiusTopEnd="@dimen/spacing_normal"
                    app:boxCornerRadiusTopStart="@dimen/spacing_normal"
                    app:prefixText="Rp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_stock"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:hint="@string/hint_stock"
                    app:boxCornerRadiusBottomEnd="@dimen/spacing_normal"
                    app:boxCornerRadiusBottomStart="@dimen/spacing_normal"
                    app:boxCornerRadiusTopEnd="@dimen/spacing_normal"
                    app:boxCornerRadiusTopStart="@dimen/spacing_normal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_stock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/container_action_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_medium"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_product" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_action_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_medium"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_delete" />

            <Space
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_update" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>