<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar.WithNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Registration" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="@dimen/spacing_normal"
            app:boxCornerRadiusBottomStart="@dimen/spacing_normal"
            app:boxCornerRadiusTopEnd="@dimen/spacing_normal"
            app:boxCornerRadiusTopStart="@dimen/spacing_normal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_store_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/hint_store_name"
            app:boxCornerRadiusBottomEnd="@dimen/spacing_normal"
            app:boxCornerRadiusBottomStart="@dimen/spacing_normal"
            app:boxCornerRadiusTopEnd="@dimen/spacing_normal"
            app:boxCornerRadiusTopStart="@dimen/spacing_normal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/hint_password"
            app:boxCornerRadiusBottomEnd="@dimen/spacing_normal"
            app:boxCornerRadiusBottomStart="@dimen/spacing_normal"
            app:boxCornerRadiusTopEnd="@dimen/spacing_normal"
            app:boxCornerRadiusTopStart="@dimen/spacing_normal"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/btn_registration" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>